--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,7 @@
 @import url("../styles/topics.css");
 @import url("../styles/contact.css");
 @import url("../styles/footer.css");
-
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root {
@@ -12,6 +12,7 @@
     --gradient-color:linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
     --white-color:#ffff;
     --primary-font: "Poppins", sans-serif;
+    --secundary-font:"Josefin Sans", sans-serif;
     --orange-color: #EB9B00;
     --blue-color:#002F52;
     --black-color:#000000;
