--- a/styles/banner.css
+++ b/styles/banner.css
@@ -33,3 +33,23 @@
     background: url("../assets/Lupa.svg") no-repeat;
     background-position: 1em;
 }
+
+@media screen and (min-width:1024px) {
+    .banner {
+        padding:6em 3em
+    }
+
+    .banner__title {
+        font-size: 2.25rem;
+
+    }
+    .banner__search {
+        width: 40%;
+        padding: 1.5em;
+    }
+
+    .banner__search::placeholder {
+        background-position: 6em;
+    }
+
+}
