--- a/styles/carousel.css
+++ b/styles/carousel.css
@@ -78,3 +78,29 @@
 .card__description {
     padding: 1em;
 }
+
+@media screen and (min-width:1024px) {
+    
+    .carousel__title {
+        padding: 2em 0 1em;
+        font-size: 1.625rem;
+    }
+
+    .swiper-slide img {
+        width: 50%;
+        padding: 0 5em;
+    }
+    .swiper-slide{
+    display: flex;
+    justify-content: center;
+ }
+
+    .swiper-pagination {
+        padding: 2em 0;
+
+ }
+
+    .card-container {
+        margin: 3em 13em 3em 13em;
+    }
+}
