--- a/styles/header.css
+++ b/styles/header.css
@@ -133,11 +133,12 @@
         padding: 1em;
     }
 
-    .menu__item:active {
+    /* adiciona o background quando o elemento filho é acionado */
+    .menu__item:focus-within{
         background:var(--gradient-color);
     }
 
-    .option__menu-link:active {
+    .option__menu-link:focus{
         color: var(--white-color);
 
     }
