--- a/styles/contact.css
+++ b/styles/contact.css
@@ -43,17 +43,16 @@
     .contact-container {
         padding: 4em;
         display: flex;
-        text-align: left;
-        justify-content: space-between;
+        justify-content: center;
+        align-items: center;
+    
 
     }
     .contact__email {
         width: 40%;
-        margin-right: 2.5em;
+        height: 10%;
     }
-    .contact-container__1024 {
-        margin-left:2.5em ;
-    }
+
 
     .contact__title{
         font-size: 1.5rem;
