--- a/styles/banner.css
+++ b/styles/banner.css
@@ -53,3 +53,10 @@
     }
 
 }
+
+@media screen and (min-width:1728px) {
+
+    .banner__search::placeholder {
+        background-position: 15em;
+    }
+}
