--- a/styles/carousel.css
+++ b/styles/carousel.css
@@ -104,3 +104,37 @@
         margin: 3em 13em 3em 13em;
     }
 }
+
+@media screen and (min-width:1728px){
+    .carousel__desktop{
+        display: flex;
+        margin: 0 10vw 3em 10vw;
+        align-items: center;
+    }
+    .swiper-pagination {
+        margin: 0;
+    }
+    .card-container {
+        margin: 4em 0 2em;
+        width: 50%;
+        align-items: center;
+        /* height: 60%; */
+    }
+    .swiper-button-prev,.swiper-button-next {
+        display: block;
+    }
+    .description__title {
+        font-size: 2rem;
+        margin-bottom: 0.5em;
+    }
+
+    .description__title-author {
+        text-wrap: nowrap;
+    }
+
+    .card-btn {
+        margin-bottom: 2em;
+    }
+
+
+}
