--- a/styles/header.css
+++ b/styles/header.css
@@ -62,17 +62,10 @@
     font-weight: 400;
 }
 
-.header__btn {
+.header__btn,.menu-container__title,.options-list,.menu-container__text {
     display: none;
 }
 
-.menu-container__title {
-    display:none
-}
-
-.options-list {
-    display: none;
-}
 
 @media screen and (min-width:1024px) {
 
@@ -164,5 +157,34 @@
     }
     .menu-container {
         gap: 1.5em;
+    }
+}
+
+@media screen and (min-width:1728px){
+    .header-container{
+        display: flex;
+        padding: 0 2em;
+    }
+
+    .container__link {
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+    }
+
+    .menu-container__text{
+        display: block;
+        font-size: 1.25rem;
+        color: var(--black-color);
+    }
+
+    .options-list {
+        margin-right: auto;
+    }
+    .option__item-title:hover {
+        cursor: pointer;
+    }
+    .menu-list,.menu__item {
+        width: 28%;
     }
 }
